--- a/led_display/led.html
+++ b/led_display/led.html
@@ -363,7 +363,7 @@ async function connect() {
 		save_to_flash_msg[0] = cmd_save_to_flash;		
 
 		setTimeout(function(){
-			log('> Saving message...');
+			log('Saving message...');
 			saveToFlash();
 		}, 200);	
 		
