--- a/led_display/led.html
+++ b/led_display/led.html
@@ -359,12 +359,12 @@ async function connect() {
 						
 		}
 
-		time(' - entering timeout');
+		time('- entering timeout');
 		setTimeout(function(){
 			log('Saving message...');
-			time(' - inside timeout');
+			time('- inside timeout');
 			saveToFlash(characteristic);
-		}, 200);	
+		}, 2000);	
 		
     },
     function success() {
@@ -397,8 +397,9 @@ async function saveToFlash(characteristic) {
 	log('Calling save to flash...');
 	var save_to_flash_msg = new Uint8Array(1);
 	save_to_flash_msg[0] = cmd_save_to_flash;
-	time('char: ' + characteristic.toString);
+	time('before write function');
 	await characteristic.writeValue(save_to_flash_msg);		// TODO: DOESN*T WORK SINCE const characteristic is not defined here.
+	time('after write function');
 	log('Message saved to flash...');
 }
 
@@ -449,7 +450,7 @@ async function exponentialBackoff(max, delay, toTry, success, fail) {
 }
 
 function time(text) {
-  log('[' + new Date().toJSON().substr(11, 8) + '] ' + text);
+  log('[' + new Date().toJSON().substr(11, 10) + '] ' + text);
 }
 </script>
 <script>
