Include manufacturing date in digital passport
Added manufacturing date display to the digital passport template.

--- a/yarn_template.html
+++ b/yarn_template.html
@@ -1,183 +1,17 @@
-<head>
-  <style>
-    #dpp-output {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    background-color: #f4f7f6;
-}
+<div class="passport-card">
+    <h1>Digital Passport: {{product_name}}</h1>
+    <p><strong>Serial Number:</strong> {{serial_number}}</p>
+    
+    <div class="details">
+        <h3>Specifications</h3>
+        <ul>
+            <li>Material: {{specs.material}}</li>
+        </ul>
+    </div>
 
-/* The Main DPP Card */
-.dpp-card {
-    width: 100%;
-    max-width: 500px;
-    background: #ffffff;
-    border-radius: 16px; /* Modern rounded corners */
-    box-shadow: 0 10px 25px rgba(0,0,0,0.08);
-    overflow: hidden;
-    border: 1px solid #e1e4e8;
-}
-
-/* Header Section */
-.dpp-card header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 24px;
-    background: linear-gradient(to right, #ffffff, #f9fafb);
-    border-bottom: 1px solid #f0f2f5;
-}
-
-.product-img {
-    width: 80px;
-    height: 80px;
-    object-fit: cover;
-    border-radius: 12px;
-    background-color: #f8f9fa;
-    border: 1px solid #eee;
-}
-
-/* General Section Styling */
-.dpp-card section {
-    padding: 20px 24px;
-    border-bottom: 1px solid #f0f2f5;
-}
-
-.dpp-card h3 {
-    font-size: 0.75rem;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    color: #6b7280;
-    margin-bottom: 12px;
-    margin-top: 0;
-}
-
-/* Circularity Metrics Grid */
-.score-box {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px 12px;
-    margin-bottom: 6px;
-    background-color: #f9fafb;
-    border-radius: 8px;
-    font-size: 0.9rem;
-}
-
-.score-box strong {
-    color: #059669; /* Eco-friendly green */
-    font-weight: 600;
-}
-
-/* Logistics and Footer */
-.dpp-card section p {
-    margin: 4px 0;
-    font-size: 0.9rem;
-    color: #374151;
-}
-
-.dpp-card footer {
-    padding: 16px 24px;
-    background-color: #f9fafb;
-    font-size: 0.75rem;
-    color: #9ca3af;
-}
-
-.dpp-card footer p {
-    margin: 2px 0;
-}
-
-/* Fallback for the empty image we discussed earlier */
-.empty-image {
-    background-color: #e5e7eb !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-}
-
-.empty-image::after {
-    content: 'No Image';
-    font-size: 10px;
-    color: #9ca3af;
-}
-  </style>
-</head>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.8/handlebars.min.js">
-</script>
-<script>
-    // 'safe' tells Django not to turn quotes into &quot;
-    // We wrap it in quotes or use json_script for security
-    const dpp_json = {{ dpp_json|safe }};
-</script>
-<script>
-  Handlebars.registerHelper('multiply', function(value, multiplier) {
-    return (value * multiplier).toFixed(0);
-  });
-
-  // Render Function
-  window.addEventListener('load', function() {
-    const source = document.getElementById("dpp-template").innerHTML;
-    const template = Handlebars.compile(source);
-    const html = template(dpp_json);
-    document.getElementById("dpp-output").innerHTML = html;
-  });
-</script>
-
-<div id="dpp-output"></div>
- {% if dpp_json %}
-
-    <script id="dpp-template" type="text/x-handlebars-template">
-
-      {% verbatim %} <div class="dpp-card">
-        {{#with credentialSubject}}
-        <header>
-          <div>
-            <h2 style="margin:0">{{name}}</h2>
-            <small>Batch: {{batchNumber}}</small>
-          </div>
-          <img src="{{productImage.linkURL}}" class="product-img">
-        </header>
-
-        <section>
-          <h3>Description</h3>
-          <p style="font-size: 0.9rem; line-height: 1.4;">{{description}}</p>
-        </section>
-
-        <section>
-          <h3>Circularity Metrics</h3>
-          <div class="score-box">
-            <span>Recycled Content:</span>
-            <strong>{{multiply circularityScorecard.recycledContent 100}}%</strong>
-          </div>
-          <div class="score-box">
-            <span>Recyclable Content:</span>
-            <strong>{{circularityScorecard.recyclableContent}}%</strong>
-          </div>
-          <div class="score-box">
-            <span>Utility Factor:</span>
-            <strong>{{circularityScorecard.utilityFactor}}</strong>
-          </div>
-          <div class="score-box">
-            <span>Material circularity:</span>
-            <strong>{{ circularityScorecard.materialCircularityIndicator}}</strong>
-          </div>
-        </section>
-
-        <section>
-          <h3>Logistics</h3>
-          <p><strong>Weight:</strong> {{dimensions.weight.value}} {{dimensions.weight.unit}}</p>
-          <p><strong>Origin:</strong> {{countryOfProduction}}</p>
-        </section>
-        {{/with}}
-
-        <footer>
-          <p>Issued by: {{issuer.name}}</p>
-          <p>ID: {{id}}</p>
-        </footer>
-      </div>
-      {% endverbatim %}
-</script>
-{% endif %}
+    {{#if manufacturing_date}}
+        <p>Manufactured on: {{manufacturing_date}}</p>
+    {{else}}
+        <p>Date: Not specified</p>
+    {{/if}}
+</div>
