--- a/remote_template.html
+++ b/remote_template.html
@@ -40,7 +40,7 @@
 <div class="passport-card">
     <div class="passport-header">
         <div>
-            <h2 style="margin:0;">{{product_name}}</h2>
+            <h2 style="margin:0;">{{credentialSubject.description}}</h2>
             <small style="color:#888;">SN: {{serial_number}}</small>
         </div>
         {{#if status}}
