Bind data to remote_template.html
Add data binding for dynamic content in template

--- a/remote_template.html
+++ b/remote_template.html
@@ -36,7 +36,7 @@
     .spec-item { font-size: 0.9rem; }
     .spec-label { color: #666; display: block; font-size: 0.75rem; text-transform: uppercase; }
 </style>
-
+{{data}}
 <div class="passport-card">
     <div class="passport-header">
         <div>
