--- a/remote_template.html
+++ b/remote_template.html
@@ -1,78 +1,81 @@
-<style>
-    .passport-card {
-        font-family: 'Segoe UI', system-ui, sans-serif;
-        max-width: 500px;
-        border: 1px solid #e0e0e0;
-        border-radius: 12px;
-        padding: 24px;
-        box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-        background: #fff;
-        color: #333;
-    }
-    .passport-header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        border-bottom: 2px solid #f0f0f0;
-        padding-bottom: 15px;
-        margin-bottom: 20px;
-    }
-    .status-badge {
-        padding: 4px 12px;
-        border-radius: 20px;
-        font-size: 0.8rem;
-        font-weight: bold;
-        background: #e1f5fe;
-        color: #0288d1;
-    }
-    .specs-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 10px;
-        background: #f9f9f9;
-        padding: 15px;
-        border-radius: 8px;
-    }
-    .spec-item { font-size: 0.9rem; }
-    .spec-label { color: #666; display: block; font-size: 0.75rem; text-transform: uppercase; }
-</style>
-{{data}}
-<div class="passport-card">
-    <div class="passport-header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; line-height: 1.6; color: #333; max-width: 800px; margin: 20px auto; padding: 0 20px; }
+        .card { border: 1px solid #e1e4e8; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .header { background: #f6f8fa; padding: 20px; border-bottom: 1px solid #e1e4e8; }
+        .header h1 { margin: 0; color: #0366d6; font-size: 1.5rem; }
+        .section { padding: 20px; border-bottom: 1px solid #f0f2f4; }
+        .section:last-child { border-bottom: none; }
+        .label { font-weight: bold; color: #586069; font-size: 0.85rem; text-transform: uppercase; display: block; margin-bottom: 4px; }
+        .value { font-size: 1rem; margin-bottom: 15px; word-break: break-all; }
+        .badge { display: inline-block; background: #e1f5fe; color: #01579b; padding: 2px 8px; border-radius: 12px; font-size: 0.75rem; margin-right: 5px; }
+        .link-button { display: inline-block; background: #28a745; color: white; padding: 10px 15px; text-decoration: none; border-radius: 6px; font-size: 0.9rem; }
+        .footer { font-size: 0.75rem; color: #6a737d; text-align: center; padding: 20px; }
+    </style>
+</head>
+<body>
+
+<div class="card">
+    <header class="header">
+        <span class="label">Product Name</span>
+        <h1>{{credentialSubject.name}}</h1>
         <div>
-            <h2 style="margin:0;">{{credentialSubject.name}}</h2>
-            <small style="color:#888;">{{credentialSubject.description}}</small>
+            {{#each type}}
+                <span class="badge">{{this}}</span>
+            {{/each}}
         </div>
-        {{#if status}}
-            <span class="status-badge">{{status}}</span>
-        {{/if}}
-    </div>
+    </header>
 
-    <div class="details">
-        <h4><i class="fas fa-info-circle"></i> Specifications</h4>
-        <div class="specs-grid">
-            <div class="spec-item">
-                <span class="spec-label">Material</span>
-                <strong>{{specs.material}}</strong>
+    <section class="section">
+        <span class="label">Description</span>
+        <div class="value">{{credentialSubject.description}}</div>
+
+        <span class="label">Manufacturer</span>
+        <div class="value"><strong>{{credentialSubject.producedByParty.name}}</strong></div>
+        
+        <span class="label">Production Date</span>
+        <div class="value">{{credentialSubject.productionDate}}</div>
+    </section>
+
+    <section class="section" style="background-color: #fcfcfc;">
+        <span class="label">Value Chain Process</span>
+        <div class="value">{{credentialSubject.traceabilityInformation.valueChainProcess}}</div>
+
+        {{#each credentialSubject.traceabilityInformation.traceabilityEvent}}
+            <span class="label">External Traceability</span>
+            <div class="value">
+                <a href="{{this.linkURL}}" class="link-button" target="_blank">
+                    View {{this.linkName}}
+                </a>
             </div>
-            <div class="spec-item">
-                <span class="spec-label">Weight</span>
-                <strong>{{specs.weight}}</strong>
+        {{/each}}
+    </section>
+
+    <section class="section">
+        <span class="label">Issuer</span>
+        <div class="value">{{issuer.name}}</div>
+        
+        <div style="display: flex; justify-content: space-between;">
+            <div>
+                <span class="label">Valid From</span>
+                <div class="value">{{validFrom}}</div>
             </div>
-            {{#if specs.origin}}
-            <div class="spec-item">
-                <span class="spec-label">Origin</span>
-                <strong>{{specs.origin}}</strong>
+            <div>
+                <span class="label">Valid Until</span>
+                <div class="value">{{validUntil}}</div>
             </div>
-            {{/if}}
         </div>
-    </div>
-
-    <div style="margin-top: 20px; font-size: 0.85rem;">
-        {{#if manufacturing_date}}
-            <p>📅 <strong>Manufactured:</strong> {{manufacturing_date}}</p>
-        {{else}}
-            <p style="color: #999;">📅 Date: Not specified</p>
-        {{/if}}
-    </div>
+    </section>
 </div>
+
+<div class="footer">
+    Credential ID: {{id}}<br>
+    Subject DID: {{credentialSubject.id}}
+</div>
+
+</body>
+</html>
