--- a/remote_template.html
+++ b/remote_template.html
@@ -8,7 +8,9 @@
     </style>
 </head>
 <body>
-
+<pre>
+    {{json this}}
+</pre>
 <div class="dpp-container">
     {{#if credentialSubject}}
         <h2>Product: {{credentialSubject.name}}</h2>
