--- a/remote_template.html
+++ b/remote_template.html
@@ -50,7 +50,7 @@
 
     <hr>
     <div style="font-size: 10px; color: #666;">
-        <p><strong>Issuer:</strong> {{issuer.name}} ({{issuer.id}})</p>
+        <p><strong>Issuer:</strong> {{issuer.name}} ()</p>
     </div>
 </div>
 
