Add max-width to dpp-container style

--- a/remote_template.html
+++ b/remote_template.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <style>
-        .dpp-container { font-family: sans-serif; border: 2px solid #000; padding: 20px; border-radius: 10px; background:#f6f6f6 }
+        .dpp-container { font-family: sans-serif; border: 2px solid #000; padding: 20px; border-radius: 10px; background:#f6f6f6; max-width: 480px; }
         .highlight { color: #007bff; font-weight: bold; }
         .data-box { background: #f4f4f4; padding: 10px; margin: 10px 0; border-left: 5px solid #007bff; }
     </style>
